# e1071

./: COPYRIGHT.svm.cpp  COPYRIGHT.svm.tune.R  DESCRIPTION  INDEX  MD5  NAMESPACE  NEWS  README  TITLE  cleanup  configure  configure.ac  configure.in  svn-commit.tmp
R/: bclust.R  bincombinations.R  cmeans.R  cmeanscl.R  countpattern.R  cshell.R  discrete.R  e1071-deprecated.R  fclustIndex.R  gknn.R  hamming.distance.R  ica.R  impute.R  interpolate.R  kurtosis.R  lca.R  matchClasses.R  matchControls.R  mvnorm.R  naiveBayes.R  performance.R  plot.fclust.R  plot.stft.R  pnm.R.in  print.fclust.R  read.octave.R  scaclust.R  scale_data_frame.R  shortestPaths.R  skewness.R  sparse.R  svm.R  tune.R  zzz.R  zzz.R.in
data/: Glass.rda  HouseVotes84.rda  Ozone.rda
inst/: NEWS  NEWS.Rd
inst/doc/: svmdoc.R  svmdoc.Rnw  svmdoc.aux  svmdoc.dvi  svmdoc.pdf.r3159  (+7 more)
man/: Discrete.Rd  Glass.Rd  HouseVotes84.Rd  Mvnorm.Rd  Ozone.Rd  bclust.Rd  bincombinations.Rd  bootstrap.lca.Rd  boxplot.bclust.Rd  classAgreement.Rd  cmeans.Rd  cmeanscl.Rd  countpattern.Rd  cshell.Rd  e1071-deprecated.Rd  e1071-internal.Rd  element.Rd  fclustIndex.Rd  gknn.Rd  hamming.distance.Rd  hamming.window.Rd  hanning.window.Rd  hsv_palette.Rd  ica.Rd  impute.Rd  interpolate.Rd  kurtosis.Rd  lca.Rd  matchClasses.Rd  matchControls.Rd  moment.Rd  naiveBayes.Rd  performance.Rd  permutations.Rd  plot.fclust.Rd  plot.stft.Rd  plot.svm.Rd  plot.tune.Rd  pnm.Rd  predict.naiveBayes.Rd  (+20 more)
src/: Makefile.in  Makevars.in  Rsvm.c  cmeans.c  cmeanscl.c  cshell.c  floyd.c  init.c  pnm.c.in  scaclust.c  semantic.cache  svm.cpp  svm.h
vignettes/: svmdoc.Rnw
