AC_INIT(DESCRIPTION)

HAVEPNM="FALSE"

AC_SEARCH_LIBS(pnm_readpnm, netpbm, HAVEPNM="TRUE", HAVEPNM="FALSE")

if test "${HAVEPNM}" = "FALSE"; then
  AC_SEARCH_LIBS(pbm_readpbm, pbm)
  AC_SEARCH_LIBS(pgm_readpgm, pgm)
  AC_SEARCH_LIBS(ppm_readppm, ppm)
  AC_SEARCH_LIBS(pnm_writepnm, pnm, HAVEPNM="TRUE", HAVEPNM="FALSE")
fi
	
EXTRALIBS=${LIBS}

if test "${HAVEPNM}" = "TRUE"; then
  PNMOBJS=pnm.o
  PNMSO=pnm.so
fi

AC_SUBST(HAVEPNM)
AC_SUBST(PNMOBJS)
AC_SUBST(PNMSO)
AC_SUBST(EXTRALIBS)

AC_OUTPUT(R/pnm.R R/zzz.R src/Makefile)
