AC_INIT(DESCRIPTION)

HAVEPNM="FALSE"

AC_SEARCH_LIBS(pnm_readpnm, netpbm, HAVEPNM="TRUE", HAVEPNM="FALSE")

if test "${HAVEPNM}" = "FALSE"; then
  AC_SEARCH_LIBS(pbm_readpbm, pbm)
  AC_SEARCH_LIBS(pgm_readpgm, pgm)
  AC_SEARCH_LIBS(ppm_readppm, ppm)
  AC_SEARCH_LIBS(pnm_writepnm, pnm, HAVEPNM="TRUE", HAVEPNM="FALSE")
fi
	
PKG_LIBS=${LIBS}

if test "${HAVEPNM}" = "TRUE"; then
   cp src/pnm.c.in src/pnm.c
fi

AC_SUBST(HAVEPNM)
AC_SUBST(PKG_LIBS)

AC_OUTPUT(R/pnm.R src/Makevars)
